# Process-Scheduler-Simulation-FCFS-SJF-RR-EDF-C-

./: CMakeLists.txt  Licence  README.md  gitignore
data/: input.txt  output.txt
src/: main.cpp
src/core/: Scheduler.cpp  Scheduler.h
src/ds/: LinkedList.h  MinHeap.h  Node.h  Queue.h
src/io/: InputParser.cpp  InputParser.h
src/model/: IORequest.h  KillEvent.h  Process.cpp  Process.h
src/processors/: EDFProcessor.cpp  EDFProcessor.h  FCFSProcessor.cpp  FCFSProcessor.h  Processor.cpp  Processor.h  RRProcessor.cpp  RRProcessor.h  SJFProcessor.cpp  SJFProcessor.h
